fix: card component overlap

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -11,7 +11,7 @@ root {
 }
 
 .btn--primary {
-  background-color: var(--primary);
+  background-color: #fff;
   color: #242424;
   border: 1px solid var(--primary);
 }
@@ -29,6 +29,12 @@ root {
   font-size: 18px;
 }
 
+.btn--primary:hover {
+  background: transparent;
+  color: #fff;
+  border: 1px solid #fff;
+}
+
 .btn--large {
   padding: 12px 26px;
   font-size: 20px;
@@ -37,7 +43,5 @@ root {
 .btn--large:hover,
 .btn--medium:hover {
   transition: all 0.3s ease-out;
-  background: #fff;
-  color: #242424;
   transition: 250ms;
 }
